--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,22 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.8.1</version>
+</dependency>
 		
 	<dependency>
     <groupId>io.springfox</groupId>
@@ -37,16 +49,13 @@
     <version>2.8.0</version>
 </dependency>
 
-		
+
 
 <dependency>
     <groupId>io.springfox</groupId>
     <artifactId>springfox-swagger-ui</artifactId>
     <version>2.8.0</version>
-</dependency>
-
-
-		
+</dependency>		
 
 <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 <dependency>
@@ -55,6 +64,7 @@
     <version>1.18.0</version>
     <scope>provided</scope>
 </dependency>
+
 	
 <dependency>
     <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -79,6 +89,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		
+		
+<dependency>
+    <groupId>com.fasterxml.jackson.dataformat</groupId>
+    <artifactId>jackson-dataformat-xml</artifactId>
+    
+</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -116,11 +134,7 @@
 	<build>
 	<defaultGoal>install</defaultGoal>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+				</plugins>
 	</build>
 
 
