--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 server.port=9099
+#oracle properties
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522:XE
+spring.datasource.username=system
+spring.datasource.password=tiger
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
